--- a/src/main/resources/static/css/home.css
+++ b/src/main/resources/static/css/home.css
@@ -196,28 +196,40 @@
     margin-bottom: 10px;
 }
 
+.container-cfg{
+    width: 90%;
+    background: #fff;
+    border-radius: 6px;
+    padding: 20px 60px 20px 60px;
+    margin-top: 140px;
+}
+.inside-cfg{
+    margin-bottom: 30px;
+}
+
 
 .cont{
     min-height: 60vh;
     width: 100%;
-    background: #FFEEE0;
+    background: #ffffff;
     display: flex;
     align-items: center;
     justify-content: center;
 }
-.container{
+.container-mail{
     width: 90%;
     background: #fff;
     border-radius: 6px;
-    padding: 20px 60px 30px 40px;
-    box-shadow: 0 5px 10px rgba(0, 0, 0, 0.2);
+    padding: 20px 60px 20px 60px;
+    margin-top: 20px;
+    /*box-shadow: 0 5px 10px rgba(0, 0, 0, 0.2);*/
 }
-.container .content{
+.container-mail .content{
     display: flex;
     align-items: center;
     justify-content: space-between;
 }
-.container .content .left-side{
+.container-mail .content .left-side{
     width: 25%;
     height: 100%;
     display: flex;
@@ -257,7 +269,7 @@
 }
 
 
-.container .content .right-side{
+.container-mail .content .right-side{
     width: 75%;
     margin-left: 75px;
 }
@@ -309,38 +321,336 @@
 }
 
 @media (max-width: 950px) {
-    .container{
+    .container-mail{
         width: 90%;
         padding: 30px 40px 40px 35px ;
     }
-    .container .content .right-side{
+    .container-mail .content .right-side{
         width: 75%;
         margin-left: 55px;
     }
 }
 @media (max-width: 820px) {
-    .container{
+    .container-mail {
         margin: 40px 0;
         height: 100%;
     }
-    .container .content{
+
+    .container-mail .content {
         flex-direction: column-reverse;
     }
-    .container .content .left-side{
+
+    .container-mail .content .left-side {
         width: 100%;
         flex-direction: row;
         margin-top: 40px;
         justify-content: center;
         flex-wrap: wrap;
     }
-    .container .content .left-side::before{
+
+    .container-mail .content .left-side::before {
         display: none;
     }
-    .container .content .right-side{
+
+    .container-mail .content .right-side {
         width: 100%;
         margin-left: 0;
     }
 }
+.url-path{
+    margin-top: 119px;
+    width: 100%;
+    height: 6%;
+    background: #fff;
+    box-shadow: 0 0 10px rgba(0,0,0,0.5);
+    display: flex;
+}
+
+.urlawdwaw{
+    padding: 20px 60px 20px 60px;
+    margin-left: 160px;
+}
+.url-path a{
+}
+
+.mainContainer{
+    width: 100%;
+    height: 270%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    background: #e1bebe;
+    margin-top: 10px;
+    padding: 20px 60px 20px 60px;
+}
+.product-menu-container{
+    background: #fff;
+    padding: 20px 60px 20px 60px;
+    /*display: grid;
+    grid-gap: 30px;
+    grid-template-columns: 192px 1000px;*/
+    height: 100%;
+    width: 1300px;
+    overflow: hidden;
+    margin: 20px auto 0 auto;
+}
+
+.sidebar_container{
+    float: left;
+    width: 228px;
+}
+.sidebar{
+    float: left;
+    width: 226px;
+    padding: 5%;
+    margin: 0 0 16px 0;
+    border: solid 1px #f2f2f2;
+    border-radius: 5%;
+    background-color: #f9f9f9;
+}
+
+ul.sidebar-menu {
+    list-style-type: none;
+}
+.sidebar-menu li a span {
+    margin-right: 20px;
+    color: #fff;
+}
+.sidebar-menu li a  {
+    color: black;
+}
+
+.sidebar-menu li a:hover  {
+    background-color: #9e9e9e;
+    padding: 2px 5px;
+    display: block;
+    text-decoration: none;
+    color: #fff;
+}
+
+/*li.have-children ul li a {
+    background-color: #3c3636;
+    padding-left: 62px;
+}
+li.have-children ul li a:hover {
+    color: #fff;
+    background-color: #52565d;
+    padding-left: 62px;
+}*/
+li.have-children, li {
+    position: relative;
+    list-style-type: none;
+}
+.sidebar-menu .have-children > ul {
+    display: none;
+}
+
+.searchbar {
+    width: 100%;
+    display: flex;
+    margin-top: 20px;
+
+}
+.search-box-one {
+    width: 80%;
+    border-right: none;
+    padding: 5px;
+    height: 36px;
+    border-radius: 5px 0 0 5px;
+    outline: none;
+    border-color: black;
+}
+.search-box-one:focus {
+    border: 1px solid #000000;
+}
+
+
+.search-button {
+    width: 40px;
+    height: 36px;
+    border: 2px solid black;
+    background: white;
+    text-align: center;
+    color: #000000;
+    border-radius: 0 5px 5px 0;
+    cursor: pointer;
+    font-size: 20px;
+}
+
+.search-img{
+    width: 23px;
+    height: 23px;
+    margin-top: 2px;
+}
+
+
+
+.slide-container {
+
+}
+
+.slide-container p{
+
+}
+
+/* The slider itself */
+.slider {
+    -webkit-appearance: none;  /* Override default CSS styles */
+    appearance: none;
+    width: 100%; /* Full-width */
+    height: 10px; /* Specified height */
+    background: #d3d3d3; /* Grey background */
+    outline: none; /* Remove outline */
+    opacity: 0.7; /* Set transparency (for mouse-over effects on hover) */
+    -webkit-transition: .2s; /* 0.2 seconds transition on hover */
+    transition: opacity .2s;
+}
+
+/* Mouse-over effects */
+.slider:hover {
+    opacity: 1; /* Fully shown on mouse-over */
+}
+
+.slider::-moz-range-thumb {
+    width: 10px; /* Set a specific slider handle width */
+    height: 10px; /* Slider handle height */
+    background: #0c3dbb; /* Green background */
+    cursor: pointer; /* Cursor on hover */
+}
+
+
+/*OPTIONS*/
+.custom-select{
+    color: #414141;
+
+
+
+}
+.select-box {
+    cursor: pointer;
+    position : relative;
+    max-width:  20em;
+    margin: 1em auto;
+    width: 100%;
+}
+
+.select,
+.label {
+    color: #414141;
+    display: block;
+    font: 400 17px/2em 'Source Sans Pro', sans-serif;
+}
+
+.select {
+    width: 100%;
+    position: absolute;
+    top: 0;
+    padding: 5px 0;
+    height: 40px;
+    opacity: 0;
+    -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=0)";
+    background: none transparent;
+    border: 0 none;
+}
+.select-box1 {
+    background: #ececec;
+}
+
+.label {
+    position: relative;
+    padding: 5px 10px;
+    cursor: pointer;
+}
+.open .label::after {
+    content: "▲";
+}
+.label::after {
+    content: "▼";
+    font-size: 12px;
+    position: absolute;
+    right: 0;
+    top: 0;
+    padding: 5px 15px;
+    border-left: 5px solid #fff;
+}
+
+.button-28 {
+    appearance: none;
+    background-color: transparent;
+    border: 2px solid #1A1A1A;
+    border-radius: 15px;
+    box-sizing: border-box;
+    color: #3B3B3B;
+    cursor: pointer;
+    display: inline-block;
+    font-family: Roobert,-apple-system,BlinkMacSystemFont,"Segoe UI",Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
+    font-size: 16px;
+    font-weight: 600;
+    line-height: normal;
+    margin: 0;
+    height: 30px;
+    min-width: 0;
+    outline: none;
+    padding: 3px 24px;
+    text-align: center;
+    text-decoration: none;
+    transition: all 300ms cubic-bezier(.23, 1, 0.32, 1);
+    user-select: none;
+    -webkit-user-select: none;
+    touch-action: manipulation;
+    width: 100%;
+    will-change: transform;
+}
+
+.button-28:disabled {
+    pointer-events: none;
+}
+
+.button-28:hover {
+    color: #fff;
+    background-color: #1A1A1A;
+    box-shadow: rgba(0, 0, 0, 0.25) 0 8px 15px;
+    transform: translateY(-2px);
+}
+
+.button-28:active {
+    box-shadow: none;
+    transform: translateY(0);
+}
+
+
+
+
+.content {
+    text-align: right;
+    width: 930px;
+    padding: 0 0 0 5px;
+    float: right;
+}
+
+.product-block{
+    margin-bottom: 5%;
+}
+
+
+
+.product-details{
+    width: 100%;
+    padding: 60px 10vw;
+    display: flex;
+    margin-top: 120px;
+    justify-content: space-between;
+}
+
+.image-slider{
+    width: 500px;
+    height: 500px;
+    position: relative;
+    background-size: cover;
+}
+
+
 
 
 
