--- a/src/main/resources/templates/fragments/general.html
+++ b/src/main/resources/templates/fragments/general.html
@@ -10,35 +10,58 @@
 
 </head>
 <body>
-<nav class="navbar">
-    <div class="nav">
-        <img th:src="@{/img/SMS.jpg}" class="brand-logo" alt="">
-        <div class="nav-items">
-            <div class="search">
-                <input type="text" class="search-box" placeholder="search, brand, product">
-                <button class="search-btn">search</button>
+<header th:fragment="header">
+    <nav class="navbar">
+        <div class="nav">
+            <img th:src="@{/img/SMS.jpg}" class="brand-logo" alt="">
+            <div class="nav-items">
+                <form class="search" method="get" action="/search">
+                    <input type="text" class="search-box" name="filter" placeholder="search, brand, product">
+                    <button class="search-btn">search</button>
+                </form>
+                <form th:action="@{/logout}" method="post">
+                    <input type="submit" value="Logout" />
+                </form>
+                <a href="/login"><img th:src="@{/img/profile.png}" alt=""></a>
+                <a href="/cart"><img th:src="@{/img/cart.png}" alt=""></a>
             </div>
-            <a href="#"><img th:src="@{/img/profile.png}" alt=""></a>
-            <a href="#"><img th:src="@{/img/cart.png}" alt=""></a>
         </div>
-    </div>
-    <ul class="links-container">
-        <li class="link_item"><a href="#" class="link">Главная</a> </li>
-        <li class="link_item"><a href="#" class="link">Магазин</a> </li>
-        <li class="link_item"><a href="#" class="link">Коллекции</a> </li>
-        <li class="link_item"><a href="#" class="link">Поддержка</a> </li>
-    </ul>
-</nav>
-<footer>
+        <ul class="links-container">
+            <li class="link_item"><a href="/" class="link">Главная</a> </li>
+            <li class="link_item">
+                <a href="/shop" class="link">Магазин</a>
+                <ul class="submenu">
+                    <li><a th:href="@{/shop/category/{id} (id = ${1})}">Джемперы и кардиганы</a></li>
+                    <li><a th:href="@{/shop/category/{id} (id = ${2})}">Блузы и рубашки</a></li>
+                    <li><a th:href="@{/shop/category/{id} (id = ${3})}">Жакеты и жилеты</a></li>
+                    <li><a th:href="@{/shop/category/{id} (id = ${4})}">Топы и майки</a></li>
+                    <li><a th:href="@{/shop/category/{id} (id = ${5})}">Футболки</a></li>
+                    <li><a th:href="@{/shop/category/{id} (id = ${6})}">Платья и сарафаны</a></li>
+                    <li><a th:href="@{/shop/category/{id} (id = ${7})}">Брюки и шорты</a></li>
+                    <li><a th:href="@{/shop/category/{id} (id = ${8})}">Юбки</a></li>
+                    <li><a th:href="@{/shop/category/{id} (id = ${9})}">Костюмы</a></li>
+                    <li><a th:href="@{/shop/category/{id} (id = ${10})}">Верхняя одежда</a></li>
+                    <li><a th:href="@{/shop/category/{id} (id = ${11})}">Аксессуары</a></li>
+                    <li><a th:href="@{/shop/category/{id} (id = ${12})}">Головные уборы</a></li>
+                    <li><a th:href="@{/shop/category/{id} (id = ${13})}">Шарфы и платки</a></li>
+                </ul>
+            </li>
+            <li class="link_item"><a href="/product" class="link">Коллекции</a> </li>
+            <li class="link_item"><a href="/faq" class="link">Поддержка</a> </li>
+        </ul>
+    </nav>
+</header>
+
+<footer th:fragment="footer">
     <div class="footer-content">
         <img src="/img/logo.png" class="logo" alt="">
         <div class="footer-ul-container">
             <ul class="category">
                 <li class="category-title">Помощь</li>
-                <li><a href="#" class="footer-link">Оплата</a></li>
-                <li><a href="#" class="footer-link">Доставка</a></li>
-                <li><a href="#" class="footer-link">Возврат</a></li>
-                <li><a href="#" class="footer-link">Оферта</a></li>
+                <li><a href="/faq" class="footer-link">Оплата</a></li>
+                <li><a href="/faq" class="footer-link">Доставка</a></li>
+                <li><a href="/faq" class="footer-link">Возврат</a></li>
+                <li><a href="/faq" class="footer-link">Оферта</a></li>
             </ul>
             <ul class="category">
                 <li class="category-title">Коллекции</li>
@@ -50,7 +73,6 @@
             </ul>
         </div>
     </div>
-    </div>
     <p class="footer-title">Юридическая информация</p>
     <p class="info">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Repellat tempore ad suscipit, eos eius quisquam sed optio nisi quaerat fugiat ratione et vero maxime praesentium, architecto minima reiciendis iste quo deserunt assumenda alias ducimus. Ullam odit maxime id voluptates rerum tenetur corporis laboriosam! Cum error ipsum laborum tempore in rerum necessitatibus nostrum nobis modi! Debitis adipisci illum nemo aperiam sed, et accusamus ut officiis. Laborum illo exercitationem quo culpa reprehenderit excepturi distinctio tempore cupiditate praesentium nisi ut iusto, assumenda perferendis facilis voluptas autem fuga sunt ab debitis voluptatum harum eum. Asperiores, natus! Est deserunt incidunt quasi placeat omnis, itaque harum?</p>
     <p class="info">support emails - help@clothing.com, customersupport@clothing.com</p>
@@ -58,7 +80,7 @@
     <div class="footer-social-container">
         <div>
             <a href="#" class="social-link">Подписаться на рассылку</a>
-            <a href="#" class="social-link">Политика .......</a>
+            <a href="/aboutUs" class="social-link">О нас</a>
         </div>
         <div>
             <a href="#" class="social-link">instagram</a>
@@ -68,9 +90,4 @@
     </div>
     <p class="footer-credit">SMS - выберем для вас лучший стиль</p>
 </footer>
-
-
-
-
-
 </body>
